// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevTools.svelte should open by clicking the floating button 1`] = `
<body>
  <div>
    <section
      class="svelte-3ecbdl"
    >
      <div
        class="floating-dock-wrapper svelte-bg17ae"
      >
        <div
          class="floating-dock svelte-bg17ae"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div svelte-bg17ae"
          />
           
          <div
            class="container svelte-bg17ae"
          >
            <div
              class="svelte-bg17ae"
            >
              <button
                class="snapshot-btn svelte-bg17ae"
              >
                Save snapshot
              </button>
               
              <button
                class="close-btn svelte-bg17ae"
              >
                X
              </button>
            </div>
             
            <ul
              class="tabs-menu svelte-1x0h1wr"
            >
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  STATE
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  HISTORY
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  PLUGINS
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  SCHEMA
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr active"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
             
            <section
              class="split-view svelte-1uhzwor"
            >
               
              <div
                class="right-panel svelte-jstmjc"
                slot="right"
              >
                <div
                  class="no-snapshots svelte-jstmjc"
                >
                  Save snapshots by clicking "Save snapshot" button.
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`DevTools.svelte should render 1`] = `
<body>
  <div>
    <section
      class="svelte-3ecbdl"
    >
      <div
        class="floating-dock-wrapper svelte-bg17ae"
      >
        <div
          class="floating-dock svelte-bg17ae"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div svelte-bg17ae"
          />
           
          <div
            class="container svelte-bg17ae"
          >
            <div
              class="svelte-bg17ae"
            >
              <button
                class="snapshot-btn svelte-bg17ae"
              >
                Save snapshot
              </button>
               
              <button
                class="close-btn svelte-bg17ae"
              >
                X
              </button>
            </div>
             
            <ul
              class="tabs-menu svelte-1x0h1wr"
            >
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr active"
                >
                  STATE
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  HISTORY
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  PLUGINS
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  SCHEMA
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li
                class="svelte-1x0h1wr"
              >
                <button
                  class="svelte-1x0h1wr"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
             
            <section
              class="split-view svelte-1uhzwor"
            >
              <div
                class="left-panel svelte-kgddam"
                slot="left"
              >
                <div
                  class="top-row svelte-kgddam"
                >
                  <h2
                    class="svelte-kgddam"
                  >
                    Current doc
                  </h2>
                   
                  <button
                    class="svelte-gbjxau"
                  >
                    log
                  </button>
                </div>
                 
                <section
                  class="tree-view svelte-1hxrafq"
                  style=""
                >
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[0]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      type
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="string"
                    >
                      "doc"
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                      <button
                        class="log-copy-button svelte-6i69n3"
                      >
                        log
                      </button>
                       
                      <button
                        class="log-copy-button svelte-6i69n3"
                      >
                        copy
                      </button>
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3 collapsed"
                    data-tree-id="[1]"
                  >
                    <button
                      class="arrow-btn collapsed svelte-6i69n3"
                    >
                      ▶
                    </button>
                     
                    <div
                      class="node-key svelte-6i69n3 has-children"
                    >
                      content
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3 has-children"
                      data-type="array"
                    >
                       [] 1 items
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                      <button
                        class="log-copy-button svelte-6i69n3"
                      >
                        log
                      </button>
                       
                      <button
                        class="log-copy-button svelte-6i69n3"
                      >
                        copy
                      </button>
                    </div>
                  </li>
                   
                  
                </section>
              </div>
               
              <div
                class="right-panel svelte-kgddam"
                slot="right"
              >
                <div
                  class="top-row svelte-kgddam"
                >
                  <h2
                    class="svelte-kgddam"
                  >
                    Selection
                  </h2>
                   
                  <button
                    class="selection-btn svelte-gbjxau"
                  >
                    <span
                      class="caret-icon svelte-kgddam"
                    />
                  </button>
                </div>
                 
                <section
                  class="tree-view svelte-1hxrafq"
                  style=""
                >
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[0]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      jsonID
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="string"
                    >
                      "text"
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[1]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      empty
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="boolean"
                    >
                      true
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[2]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      anchor
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[3]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      from
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[4]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      head
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                  <li
                    class="row svelte-6i69n3"
                    data-tree-id="[5]"
                  >
                     
                    <div
                      class="node-key svelte-6i69n3 p-left"
                    >
                      to
                      :
                    </div>
                     
                    <div
                      class="node-value svelte-6i69n3"
                      data-type="number"
                    >
                      1
                    </div>
                     
                    <div
                      class="buttons svelte-6i69n3"
                    >
                       
                    </div>
                  </li>
                   
                  
                </section>
                 
                <div
                  class="svelte-kgddam"
                >
                  <h2
                    class="svelte-kgddam"
                  >
                    Active marks
                  </h2>
                   
                  <div
                    class="no-marks svelte-kgddam"
                  >
                    No active marks
                  </div>
                </div>
                 
                <div
                  class="svelte-kgddam"
                >
                  <h2
                    class="svelte-kgddam"
                  >
                    Document stats
                  </h2>
                   
                  <section
                    class="tree-view svelte-1hxrafq"
                    style=""
                  >
                    <li
                      class="row svelte-6i69n3"
                      data-tree-id="[0]"
                    >
                       
                      <div
                        class="node-key svelte-6i69n3 p-left"
                      >
                        nodeSize
                        :
                      </div>
                       
                      <div
                        class="node-value svelte-6i69n3"
                        data-type="number"
                      >
                        4
                      </div>
                       
                      <div
                        class="buttons svelte-6i69n3"
                      >
                         
                      </div>
                    </li>
                     
                    
                    <li
                      class="row svelte-6i69n3"
                      data-tree-id="[1]"
                    >
                       
                      <div
                        class="node-key svelte-6i69n3 p-left"
                      >
                        childCount
                        :
                      </div>
                       
                      <div
                        class="node-value svelte-6i69n3"
                        data-type="number"
                      >
                        1
                      </div>
                       
                      <div
                        class="buttons svelte-6i69n3"
                      >
                         
                      </div>
                    </li>
                     
                    
                  </section>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
